Fixing teaching table overflow

--- a/src/css/teaching.sass
+++ b/src/css/teaching.sass
@@ -3,28 +3,32 @@
     
     p, a
         font-size: 13px
-table.teaching
-    border-collapse: collapse
+
+div.teaching
     width: 100%
-    font-family: "Raleway", sans-serif
+    overflow-x: scroll
+    table
+        width: 100%
+        border-collapse: collapse
+        font-family: "Raleway", sans-serif
 
 
-    td
-        background-color: #e5e5e5
-    th
-        background-color: #c5c5c5
-    th, td 
-        padding: 15px
-    td *
-        color: #000
-    td a
-        color: $red
-
-    tr.notice 
-        th
-            background-color: #a00
-            color: $white
         td
-            background-color: #f00
-            color: $white
-            text-align: center
+            background-color: #e5e5e5
+        th
+            background-color: #c5c5c5
+        th, td 
+            padding: 15px
+        td *
+            color: #000
+        td a
+            color: $red
+
+        tr.notice 
+            th
+                background-color: #a00
+                color: $white
+            td
+                background-color: #f00
+                color: $white
+                text-align: center
